--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-<!--title-->
 <div class="jumbotron">
     <h1 class="text-center">Crystals Collector!</h1>
     <h3 class="text-center">Create the correct combination of gems to match the number shown!</h3>
@@ -34,7 +33,6 @@
                 </div>
             </div>
         </div>
-        <!-- Result Panel -->
         <div class="col-lg-6">
             <div class="panel panel-danger">
                 <div class="panel-heading">
@@ -45,22 +43,22 @@
                         <div class="row">
                             <div class="col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img id="purple" src="assets/images/amethyst.jpg" alt="purple">
+                                    <img id="amethyst" src="assets/images/amethyst.jpg" alt="amethyst">
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img id="green" src="assets/images/opal.jpg" alt="green">
+                                    <img id="opal" src="assets/images/opal.jpg" alt="opal">
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img id="pink" src="assets/images/citrine.jpg" alt="pink">
+                                    <img id="citrine" src="assets/images/citrine.jpg" alt="citrine">
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img id="blue" src="assets/images/garnet.jpg" alt="blue">
+                                    <img id="garnet" src="assets/images/garnet.jpg" alt="garnet">
                                 </div>
                             </div>
                         </div>
@@ -101,6 +99,6 @@
         </div>
     </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
-        </body>
+</body>
 
-    </html>
+</html>
